--- a/Landing_4/scss/hero.scss
+++ b/Landing_4/scss/hero.scss
@@ -7,6 +7,10 @@
     margin-top: 0;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    @media (max-width: $mobile){
+        background-position: calc(20% + -60px);
+        background-size: cover;
+    }
     @media (max-width: $mobile-sm){
         background-position: calc(20% + -60px);
         background-size: auto;
@@ -17,7 +21,7 @@
         height: 30vh;
         background-color: #ffffff;
         transform: translateY(100%);
-        @media (max-width: $mobile-sm){
+        @media (max-width: $mobile){
             width: auto;
             height: auto;
             transform: translateY(200%);
@@ -32,6 +36,9 @@
             padding: 3%;
             margin: 0 0 2% 0;
             width: 50%;
+            @media (max-width: $mobile){
+                width: 60%;
+            }
             @media (max-width: $mobile-sm){
                 width: 80%;
             }
