--- a/Landing_4/scss/styles.scss
+++ b/Landing_4/scss/styles.scss
@@ -151,7 +151,7 @@ p{
 }
 .wrapper{
     display: flex;
-    @media (max-width: $mobile-sm){
+    @media (max-width: $mobile){
         display: block;
     }
 }
