--- a/Landing_4/scss/testimonial.scss
+++ b/Landing_4/scss/testimonial.scss
@@ -5,7 +5,7 @@
     &-wrap{
         display: flex;
         justify-content: space-between;
-        @media (max-width: $mobile-sm){
+        @media (max-width: $mobile){
             display: block;
         }
     }
@@ -19,7 +19,7 @@
         padding: 4%;
         text-align: justify;
         position: relative;
-        @media (max-width: $mobile-sm){
+        @media (max-width: $mobile){
             width: 100%;
             margin: 0 0 5% 0;
         }
