--- a/Landing_4/css/subpage.css
+++ b/Landing_4/css/subpage.css
@@ -6,9 +6,28 @@
   text-align: justify;
 }
 
+@media (max-width: 1024px) {
+  .subpage__info-inner {
+    display: block;
+  }
+}
+
 .subpage__info-inner-img {
   margin: 0 2% 0 0;
   max-width: 25%;
+}
+
+@media (max-width: 768px) {
+  .subpage__info-inner-img {
+    margin: 0 0 2% 0;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .subpage__info-inner-img img {
+    width: 100%;
+  }
 }
 
 .subpage__info-inner-text h3 {
@@ -26,12 +45,25 @@
   max-width: 25%;
 }
 
+@media (max-width: 1024px) {
+  .subpage__info-inner .middle {
+    margin: 0 0 2% 0;
+    max-width: 100%;
+  }
+}
+
 .subpage__info-inner:after {
   content: '';
   position: absolute;
   border-bottom: 1px solid rgba(0, 0, 0, 0.16);
   bottom: -15%;
   width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .subpage__info-inner:after {
+    bottom: -5%;
+  }
 }
 
 .gallery__inner {
@@ -41,5 +73,50 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 1650px) {
+  .gallery__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 1280px) {
+  .gallery__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 1024px) {
+  .gallery__inner {
+    display: block;
+  }
+}
+
+@media (max-width: 1650px) {
+  .gallery__inner-item {
+    margin: 0 2% 0 0;
+  }
+}
+
+@media (max-width: 1280px) {
+  .gallery__inner-item {
+    margin: 0 2% 0 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  .gallery__inner-item {
+    margin: 0 0 5% 0;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .gallery__inner-item img {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=subpage.css.map */
