--- a/Landing_4/css/hero.css
+++ b/Landing_4/css/hero.css
@@ -6,6 +6,13 @@
   background-size: 100% 100%;
 }
 
+@media (max-width: 1024px) {
+  .hero {
+    background-position: calc(20% + -60px);
+    background-size: cover;
+  }
+}
+
 @media (max-width: 768px) {
   .hero {
     background-position: calc(20% + -60px);
@@ -29,6 +36,20 @@
           transform: translateY(100%);
 }
 
+@media (max-width: 1280px) {
+  .hero-wrap {
+    width: 65vw;
+    height: 30vh;
+  }
+}
+
+@media (max-width: 1024px) {
+  .hero-wrap {
+    width: 65vw;
+    height: 30vh;
+  }
+}
+
 @media (max-width: 768px) {
   .hero-wrap {
     width: auto;
@@ -41,6 +62,18 @@
 .hero-title {
   padding: 10%;
   width: 95%;
+}
+
+@media (max-width: 1280px) {
+  .hero-title {
+    padding: 5%;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-title {
+    padding: 5%;
+  }
 }
 
 .hero-title p {
