--- a/Landing_4/scss/var.scss
+++ b/Landing_4/scss/var.scss
@@ -1,5 +1,6 @@
 $textColor: #666666; //Main theme Color
 $headlineColor: #8f2b50;; //Emphasis color h1-5.
+$desctop: 1650px;
 $laptop: 1280px;
 $tablet: 1024px;
 $mobile: 768px;
